# opentelemetry-android

./: .clomonitor.yml  .fossa.yml  .gitignore  .gitlab-ci.yml  .lychee.toml  .lycheeignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_LEGAL_BRIEF.md  CONTRIBUTING.md  FIX_SUMMARY.md  HOW_TO_OPEN_UPSTREAM_PR.md  JAEGER_UPDATE_SUMMARY.md  JAEGER_UPDATE_TEST_REPORT.md  LEGAL_BRIEF_SESSION_CONCURRENCY_FIX.md  MEETING_TALKING_POINTS.md  PR_SUBMISSION_STRATEGY.md  PR_SUBMISSION_STRATEGY_PARALLEL.md  README.md  RELEASING.md  SECURITY.md  VERSIONING.md  build.gradle  build.gradle.kts  gradle.properties  renovate.json5  settings.gradle  settings.gradle.kts
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  renovate.json5  repository-settings.md
agent-api/: build.gradle.kts
android-agent/: build.gradle.kts
android-agent-bom/: build.gradle.kts
animal-sniffer-signature/: build.gradle.kts
app/: build.gradle.kts
buildSrc/: build.gradle.kts
common/: build.gradle.kts
core/: build.gradle.kts  consumer-rules.pro
demo-app/: README.md  build.gradle.kts  collector.yaml  compose.yaml  gradle.properties  proguard-rules.pro  settings.gradle.kts
dependencyManagement/: build.gradle.kts
docs/: EXPORTER_CHAIN.md  KOTLIN_FIRST.md  ROADMAP.md  STRICTMODE.md  WRITING_INSTRUMENTATION.md  faq.md
gradle/: libs.versions.toml  spotless.license.java
instrumentation/: build.gradle.kts
instrumentation/native-crash/src/main/cpp/: CMakeLists.txt  native_crash_handler.c
opentelemetry-android-bom/: build.gradle.kts
sample-app/: build.gradle  (+1 more)
(+2005 files in other folders)
